Bump Gradle version and make Fabric mod